# NiTE-2.0.0

./: NiTEDevEnvironment  openni2_NITE2.txt
Documentation/html/: _ni_t_e_8h.html  _ni_t_e_8h_source.html  _nite_c_types_8h.html  _nite_c_types_8h_source.html  _nite_enums_8h.html  _nite_enums_8h_source.html  annotated.html  classes.html  classnite_1_1_array-members.html  classnite_1_1_array.html  classnite_1_1_bounding_box-members.html  classnite_1_1_bounding_box.html  classnite_1_1_bounding_box__inherit__graph.map  classnite_1_1_gesture_data-members.html  classnite_1_1_gesture_data.html  classnite_1_1_hand_data-members.html  classnite_1_1_hand_data.html  classnite_1_1_hand_tracker-members.html  classnite_1_1_hand_tracker.html  classnite_1_1_hand_tracker_1_1_listener-members.html  classnite_1_1_hand_tracker_1_1_listener.html  classnite_1_1_hand_tracker_frame_ref-members.html  classnite_1_1_hand_tracker_frame_ref.html  classnite_1_1_ni_t_e-members.html  classnite_1_1_ni_t_e.html  classnite_1_1_plane-members.html  classnite_1_1_plane.html  classnite_1_1_plane__inherit__graph.map  classnite_1_1_point3f-members.html  classnite_1_1_point3f.html  classnite_1_1_point3f__inherit__graph.map  classnite_1_1_pose_data-members.html  classnite_1_1_pose_data.html  classnite_1_1_quaternion-members.html  classnite_1_1_quaternion.html  classnite_1_1_quaternion__inherit__graph.map  classnite_1_1_skeleton.html  (+70 more)
Redist/: readme.txt
Samples/cmaketest/: 111Makefile  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  NiTE.ini  NiTE.ini~  cmake_install.cmake  cmaketest  cmaketest.cpp~
(+7 files in other folders)
